--- a/contactinfo.html
+++ b/contactinfo.html
@@ -2,6 +2,9 @@
 layout: default
 ---
 
+# [Home](./index.html) | [About me](./aboutme.html) | [Contact](./contactinfo.html) | [Resources](./resources.html) | 
+
+
 ## Welcome to another page
 
 _yay_
